Add exception handling to get offer by id endpoint
